--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"cors": "^2.8.1",
 		"dotenv": "^8.6.0",
 		"express": "^4.14.0",
+		"express-rate-limit": "^7.5.0",
 		"helmet": "^3.1.0",
 		"mocha": "^3.2.0"
 	},
